# factura

./: Cargo.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
integration-tests/src/dtos/: document.rs  dossier_fournisseur.rs  fichier.rs  fournisseur.rs  mod.rs  user.rs
integration-tests/src/handlers/: document.rs  dossier_fournisseur.rs  fichier.rs  fournisseur.rs  mod.rs  test_init.rs  user.rs  utils.rs
migrations/: 20240405161047_fournisseur_table.down.sql  20240405161047_fournisseur_table.up.sql  20240405161652_dossier_fournisseur_table.down.sql  20240405161652_dossier_fournisseur_table.up.sql  20240405161709_document_table.down.sql  20240405161709_document_table.up.sql  20240408100244_create_accounts_table.up.sql  20240506163032_fichier_table.down.sql  20240506163032_fichier_table.up.sql
src/: config.rs  error.rs  lib.rs  main.rs  store.rs
src/repo/: dossier_fournisseur.rs  fournisseur.rs
src/routes/: authentication.rs  document.rs  dossier_fournisseur.rs  fichier.rs  fournisseur.rs  mod.rs
src/store/: authentication.rs  db_connection.rs  document.rs  dossier_fournisseur.rs  fichier.rs  fournissueur.rs  mod.rs
src/types/: account.rs  document.rs  dossier_fournisseur.rs  fichier.rs  fournisseur.rs  mod.rs  operation.rs  pagination.rs
