workspace = { members = ["handle-errors"] }
[package]
name = "factura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
log = "0.4"
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.9"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
regex = { version = "1", features = ["unicode-case"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres", "chrono" ] }
handle-errors = { path = "handle-errors" }
dotenv = "0.15.0"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
