workspace = { members = ["handle-errors", "integration-tests"] }
[package]
name = "factura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#tokio = { version = "1.1.1", features = ["full"] }
tokio = { version = "1.1.1", features = ["macros", "fs", "rt-multi-thread"]}
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
chrono = {version = "0.4.19", features = ["serde"]}
#log = "0.4"
#env_logger = "0.9"
#log4rs = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
regex = { version = "1", features = ["unicode-case"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres", "chrono" ] }
handle-errors = { path = "handle-errors" }
dotenv = "0.15.0"
rand = "0.8"
clap = { version = "3.1.7", features = ["derive"] }
rust-argon2 = "1.0"
paseto = "2.0"
