[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
warp = "0.3"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres", "chrono" ] }
rust-argon2 = "1.0"