[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factura = { path = "../",  version = "0.1.0" }
dotenv = "0.15.0"
tokio = { version = "1.1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8", features = ["v4"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres", "chrono" ] }